fixed spacing on map pin icon + footer + squashed bug related to fade in hero

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -25,7 +25,7 @@
 
 .fade1 {
     animation: hero1Anim 0.75s ease-out 0s forwards;
-    animation-delay: 0s;
+    animation-delay: 0.1s;
 }
 
 /* transform: translateY(5%); */
@@ -44,7 +44,7 @@
 
 .fade2 {
     animation: hero2Anim 0.75s ease-out 0s forwards;
-    animation-delay: 0.5s;
+    animation-delay: 0.6s;
 }
 
 /* transform: translateY(5%); */
@@ -63,7 +63,7 @@
 
 .fade3 {
     animation: hero3Anim 0.75s ease-out 0s forwards;
-    animation-delay: 1s;
+    animation-delay: 1.1s;
 }
 
 /* transform: translateY(5%); */
